--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                 </div>
                 <div class="main__left-side_choice">
                     <select id="select-option">
-                        <option value="">Уникальность</option>
-                        <option value="">Повторы</option>
-                        <option value="">Опечатки</option>
-                        <option value="">Валидация</option>
+                        <option value="">
+                            Uniqueness</option>
+                        <option value="">Repeats</option>
+                        <option value="">Typos</option>
+                        <option value="">Validation</option>
                     </select>
-                    <button class="btn" type="submit">Проверить</button>
+                    <button class="btn" type="submit">Check</button>
                 </div>
             </div>
             <div class="main__right-side">
