--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="footer">
             <div class="footer__logo">
-                <a href="http://devincubator.by/">
+                <a href="http://devincubator.by/" target="_blank">
                     <img src="img/incubator-logo.png" alt="incubator-logo">
                 </a>
             </div>
@@ -52,17 +52,17 @@
             <div class="footer__contacts">
                 <ul>
                     <li>
-                        <a href="https://github.com/repinnick">
+                        <a href="https://github.com/repinnick" target="_blank">
                             <img src="img/github-logo.png" alt="github-logo">
                         </a>
                     </li>
                     <li>
-                        <a href="https://vk.com/check.point">
+                        <a href="https://vk.com/check.point" target="_blank">
                             <img src="img/vk-logo.png" alt="vk-logo">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/repin.nick">
+                        <a href="https://www.facebook.com/repin.nick" target="_blank">
                             <img src="img/facebook-logo.png" alt="facebook-logo">
                         </a>
                     </li>
