update html, css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Exo:wght@700;800&family=Roboto:wght@400;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Exo:wght@400;700;800&family=Roboto:wght@400;700&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>textAI - C++ Anti-Plagiarism</title>
@@ -16,26 +16,26 @@
 
         <div class="header">
             <h1>text.AI</h1>
-            <h2>Word processor with artificial <br> intelligence elements</h2>
+            <h2>A word processor with artificial <br> intelligence elements</h2>
         </div>
 
         <div class="main">
-            <div class="main__left-side">
-                <div class="main__left-side_textarea">
+            <div class="main__left_side">
+                <div class="main__textarea">
                     <textarea placeholder="Enter text here to check for uniqueness"></textarea>
                 </div>
-                <div class="main__left-side_choice">
+                <div class="main__choice">
                     <select id="select-option">
                         <option value="">
                             Uniqueness</option>
-                        <option value="">Repeats</option>
-                        <option value="">Typos</option>
+                        <option value="">Repetition</option>
+                        <option value="">Misprint</option>
                         <option value="">Validation</option>
                     </select>
                     <button class="btn" type="submit">Check</button>
                 </div>
             </div>
-            <div class="main__right-side">
+            <div class="main__right_side">
                 <img src="img/text-ai-image.jpg" alt="text-ai-image">
             </div>
         </div>
