--- a/check.html
+++ b/check.html
@@ -5,7 +5,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Exo:wght@400;700;800&family=Roboto:wght@400;700&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>textAI - C++ Anti-Plagiarism</title>
+    <link rel="stylesheet" href="css/check.css">
+    <title>textAI - Check Page</title>
 </head>
 
 <body>
@@ -14,27 +15,25 @@
 
         <div class="header">
             <h1>text.AI</h1>
-            <h2>A word processor with artificial <br> intelligence elements</h2>
+            <h2>The result of checking the text for<br> uniqueness</h2>
         </div>
 
-        <div class="main">
-            <div class="main__left_side">
-                <div class="main__textarea">
-                    <textarea placeholder="Enter text here to check for uniqueness"></textarea>
+        <div class="main_check">
+            <div class="main__container">
+                <div class="main__block">
+                    <div class="main__brain_img">
+                        <img src="img/brain-logo.png" alt="brain-logo">
+                    </div>
+                    <div class="main__text">
+                        <h2>Your text is 60% unique</h2>
+                    </div>
                 </div>
-                <div class="main__choice">
-                    <select id="select-option">
-                        <option value="">
-                            Uniqueness</option>
-                        <option value="">Repetition</option>
-                        <option value="">Misprint</option>
-                        <option value="">Validation</option>
-                    </select>
-                    <button lass="btn" type="submit">Check</button>
+
+                <div class="main__back_button">
+                    <form method="link" action="index.html">
+                        <input type="submit" value="Back">
+                    </form>
                 </div>
-            </div>
-            <div class="main__right_side">
-                <img src="img/text-ai-image.jpg" alt="text-ai-image">
             </div>
         </div>
 
