update css, html

--- a/check.html
+++ b/check.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
 <div class="container">
     <div class="content">
 
@@ -30,9 +31,10 @@
                 </div>
 
                 <div class="main__back_button">
-                    <form method="link" action="index.html">
-                        <input type="submit" value="Back">
-                    </form>
+<!--                    <form method="link" action="index.html">-->
+<!--                        <input type="submit" value="Back">-->
+<!--                    </form>-->
+                    <a href="index.html"><button>Back</button></a>
                 </div>
             </div>
         </div>
