--- a/check.html
+++ b/check.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/check.css">
     <title>textAI - Check Page</title>
 </head>
 
@@ -30,10 +29,9 @@
                 </div>
 
                 <div class="main__back_button">
-<!--                    <form method="link" action="index.html">-->
-<!--                        <input type="submit" value="Back">-->
-<!--                    </form>-->
-                    <a href="index.html"><button>Back</button></a>
+                    <a href="index.html">
+                        <button>Back</button>
+                    </a>
                 </div>
             </div>
         </div>
