--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
         <div class="header">
             <h1>text.AI</h1>
-            <h2>A word processor with artificial <br> intelligence elements</h2>
+            <h2>Intelligent App for text processing</h2>
         </div>
 
         <div class="main">
             <div class="main__left_side">
                 <div class="main__textarea">
-                    <textarea placeholder="Enter text here to check for uniqueness"></textarea>
+                    <textarea placeholder="Input text..."></textarea>
                 </div>
                 <div class="main__choice">
                     <select id="select-option">
