update html, css

--- a/check_page.html
+++ b/check_page.html
@@ -4,39 +4,40 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>textAI - Check Page</title>
+    <title>textAI - C++ Anti-Plagiarism</title>
 </head>
 
 <body>
+<div class="wrapper">
 
-<div class="container">
-    <div class="content">
-
+    <div class="container">
         <div class="header">
-            <h1>text.AI</h1>
-            <h2>The result of checking the text for<br> uniqueness</h2>
-        </div>
-
-        <div class="main_check">
-            <div class="main__container">
-                <div class="main__block">
-                    <div class="main__brain_img">
-                        <img src="img/brain-logo.png" alt="brain-logo">
-                    </div>
-                    <div class="main__text">
-                        <h2>Your text is 60% unique</h2>
-                    </div>
-                </div>
-
-                <div class="main__back_button">
-                    <a href="index.html">
-                        <button>Back</button>
-                    </a>
-                </div>
+            <div class="title">
+                <h1>text.AI</h1>
+                <h2>Intelligent App for text processing</h2>
             </div>
         </div>
+    </div>
 
-        <div class="footer">
+        <main class="main__content">
+            <div class="main__block">
+                <div class="main__brain_img">
+                    <img src="img/brain-logo.png" alt="brain-logo">
+                </div>
+                <div class="main__text">
+                    <h2>Your text is 60% unique</h2>
+                </div>
+            </div>
+
+            <div class="main__back_button">
+                <a href="index.html">
+                    <button>Back</button>
+                </a>
+            </div>
+        </main>
+
+    <div class="container">
+        <footer class="footer">
             <div class="footer__logo">
                 <a href="http://devincubator.by/" target="_blank">
                     <img src="img/incubator-logo.png" alt="incubator-logo">
@@ -64,8 +65,9 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </footer>
     </div>
+
 </div>
 
 </body>
