--- a/check_page.html
+++ b/check_page.html
@@ -14,7 +14,7 @@
         <div class="header">
             <div class="title">
                 <h1>text.AI</h1>
-                <h2>Intelligent App for text processing</h2>
+                <h2>The result of checking the text for uniqueness</h2>
             </div>
         </div>
     </div>
