update text, disabled

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                                         <option value="">
                                             Uniqueness
                                         </option>
-                                        <option value="">Repetition</option>
-                                        <option value="">Misprint</option>
-                                        <option value="">Validation</option>
+                                        <option value="" disabled>Repetition</option>
+                                        <option value="" disabled>Misprint</option>
+                                        <option value="" disabled>Validation</option>
                                     </select>
 
                                 </label>
@@ -70,7 +70,7 @@
                 </a>
             </div>
             <div class="footer__nickname">
-                Mikalai Repin, 2021
+                Artur & Mikalai, 2021
             </div>
             <div class="footer__contacts">
                 <ul>
