--- a/check.html
+++ b/check.html
@@ -46,7 +46,7 @@
                 </a>
             </div>
             <div class="footer__nickname">
-                Mikalai Repin, 2021
+                Artur & Mikalai, 2021
             </div>
             <div class="footer__contacts">
                 <ul>
